# email_addr_spec

./: Cargo.toml  LICENSE-MIT  build.rs
src/: email_rfc5322_grammar.rustpeg  lib.rs
